# rust-prolock

./: .gitignore  .markdownlint.json  CHANGELOG.md  Cargo.toml  INSTALLATION.md  README.md  status_of_github_actions.md
.github/workflows/: build-and-release.yml  build_and_bundle.yml  build_and_test.yml  linux_build_and_bundle.yml  macos_arm_build_and_bundle.yml  macos_intel_build_and_bundle.yml  release.yml  what_I_want_to_achieve.md  win_build_and_bundle.yml
doc/: buttons.key  overview.md  three_dots.key  ui_layout.pages
doc/screenshots/: screenshots.html
locales/: prolock.yml
platform/mac/: status.txt
platform/mac/ProLock.app_/Contents/: Info.plist
platform/mac/ProLock.app_/Contents/Resources/: ProLock.icns
src/: action.rs  args.rs  bundle.rs  bundles.rs  colors.rs  controller.rs  main.rs  pl_file.rs  prv_file.rs  s_idx.rs  secrets.rs  sequence.rs  transient.rs  ui.rs  util.rs  v_bundles.rs
src/data/: bundle.rs  bundle_key.rs  bundles.rs  cred.rs  document.rs  documents.rs  file_list.rs  key.rs  mod.rs  pl_file.rs  secret.rs  secrets.rs  settings.rs  transient.rs
src/ui/: actionable.rs  active_bundle.rs  bundle_buttons.rs  buttons.rs  colors.rs  controller.rs  edit_bundle.rs  inactive_bundle.rs  main_ui.rs  modal.rs  modals.rs  password.rs  pl_app.rs  show_bundle.rs  sizes.rs  top_panel.rs  v.rs  viz.rs
src/ui/actionable/: bundle_buttons.rs  edit_bundle.rs  show_bundle.rs  top_panels.rs
src/ui/actionable/bundles/: buttons.rs  central_panel.rs  edit.rs  mod.rs  show.rs
src/ui/actionable/documents/: buttons.rs  central_panel.rs  doc_content.rs  doc_header.rs  mod.rs
src/ui/assets/: mod.rs
src/ui/main_ui/: top_panels.rs
src/ui/main_ui/bundles/: buttons.rs  central_panel.rs  edit.rs  mod.rs  show_bundle.rs
src/ui/main_ui/documents/: buttons.rs  central_panel.rs  doc_content.rs  doc_header.rs  mod.rs
src/ui/modal/: change_password.rs  create_bundle.rs  show_about.rs
src/ui/modals/: ask_for_password_to_open.rs  change_file.rs  change_language.rs  change_password.rs  configure_password_generation.rs  create_bundle.rs  create_document.rs  delete_bundle.rs  delete_document.rs  show_about.rs  show_log.rs
src/util/: generate_password.rs
