[package]
name = "prolock"
version = "0.1.0"
edition = "2021"

[dependencies]
ansi_term = "0.12"
anyhow = "1.0.93"
dirs = "6.0"
egui = { version = "0.31" }
egui_extras = { version = "0.31", features = ["file", "image"] }
eframe = { version = "0.31" }
either = "1.13"
fd-lock = "4.0.2"
image = { version = "0.25", features = ["png"] }
oxilangtag = "0.1"
pwsec = "0.5.1"
rust-i18n = "3"
secstr = "0.5.1"
sequential = { version = "0.5", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sys-locale = "0.3"
tempfile = "3.15"
