[package]
name = "prolock"
version = "0.10.0"
edition = "2024"
authors = ["emabee <meinolf.block-hd@t-online.de>"]
description = """
ProLock is a tool for securely storing secrets (like passwords) in a password-protected file.
"""
keywords = ["security", "encryption"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/emabee/rust-prolock"
rust-version = "1.85.0"

[dependencies]
ansi_term = "0.12"
anyhow = "1.0"
dirs = "6.0"
egui = { version = "0.31" }
egui_extras = { version = "0.31", features = ["file", "image"] }
eframe = { version = "0.31" }
either = "1.13"
fd-lock = "4.0.2"
image = { version = "0.25", features = ["png"] }
jiff = { version = "0.2", features = ["serde"] }
oxilangtag = "0.1"
pwsec = "0.5"
rand = "0.9"
rust-i18n = "3"
secstr = "0.5"
sequential = { version = "0.5", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sys-locale = "0.3"
tempfile = "3.15"
