[package]
name = "prolock"
version = "0.1.2"
# version = "1.1.2"
edition = "2024"
authors = ["emabee <meinolf.block-hd@t-online.de>"]
description = """
ProLock is a tool for securely storing secrets like passwords and plain text snippets
in a password-protected file.
"""
keywords = ["security", "encryption"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/emabee/rust-prolock"
rust-version = "1.85.0"

[package.metadata.bundle]
name = "ProLock"
identifier = "com.github.emabee.prolock"
icon = ["resources/logo.icns"]
copyright = "Copyright (c) Meinolf Block 2025. All rights reserved."
category = "Security"
short_description = "a tool for securely storing secrets"
long_description = """
A tool for conveniently storing secrets well encrypted into a file in the local file system.
There is no interaction with any cloud service, nor with the browser or any other application.
It is a simple, but effective way to keep your secrets safe.
It is written in Rust and uses the `egui` framework for the GUI.
It is cross-platform and works on Linux, macOS, and Windows.
It is open source and licensed under the MIT or Apache-2.0 license.
"""

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["cargo"] }
dirs = "6.0"
egui = { version = "0.31" }
egui_extras = { version = "0.31", features = ["file", "image"] }
eframe = { version = "0.31" }
fd-lock = "4.0.2"
flexi_logger = { version = "0.31", features = ["buffer_writer"] }
fuzzy-matcher = "0.3"
image = { version = "0.25", features = ["png"] }
jiff = { version = "0.2", features = ["serde"] }
log = "0.4"
oxilangtag = "0.1"
pwsec = "0.5"
rand = "0.9"
rust-i18n = "3"
secstr = "0.5"
sequential = { version = "0.5", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sys-locale = "0.3"
tempfile = "3.15"
